--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "evergreen-ui": "4.21.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
