--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "evergreen-ui": "4.21.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "7.1.3",
     "react-scripts": "3.0.1",
+    "redux": "4.0.4",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
