--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "0.19.0",
     "evergreen-ui": "4.21.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-redux": "7.1.3",
+    "react-scripts": "3.0.1",
+    "redux": "4.0.4"
   },
   "devDependencies": {
     "typescript": "3.3.3"
